test_suite/tests/ui/duplicate-attribute/rename-and-ser.stderr
error: unknown serde field attribute `serialize`
 --> $DIR/rename-and-ser.rs:5:27
  |
5 |     #[serde(rename = "x", serialize = "y")]
  |                           ^^^^^^^^^
