test_suite/tests/ui/duplicate-attribute/rename-and-ser.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(rename = "x", serialize = "y")]
    x: (),
}

fn main() {}
